tests/kyverno-policies/add-service-account/no-service-account.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-no-service-account-skip
  namespace: webservice
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
