tests/kyverno-policies/add-service-account/paas-service-account-mariadb-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account-mariadb
  namespace: paas
  labels:
    app.kubernetes.io/name: mariadb
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
        runAsUser: 1000
        runAsGroup: 1001
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
        runAsUser: 1000
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1001
    fsGroup: 1001
    supplementalGroups:
      - 1001
      - 1002
