tests/kyverno-policies/add-service-account/paas-service-account-mutated-containers.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account-containers
  namespace: paas
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
