tests/kyverno-policies/add-service-account/paas-service-account-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1001
    fsGroup: 1001
    supplementalGroups:
      - 1001
      - 1002
---
apiVersion: batch/v1
kind: Job
metadata:
  name: test-paas-service-account-job
  namespace: paas
spec:
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
            privileged: false
      initContainers:
        - name: init
          image: busybox
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
            privileged: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1001
        fsGroup: 1001
        supplementalGroups:
          - 1001
          - 1002
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: test-paas-service-account-cron
  namespace: paas
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: nginx
              image: nginx:latest
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                  - ALL
                seccompProfile:
                  type: RuntimeDefault
                privileged: false
          initContainers:
            - name: init
              image: busybox
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                  - ALL
                seccompProfile:
                  type: RuntimeDefault
                privileged: false
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1001
            fsGroup: 1001
            supplementalGroups:
              - 1001
              - 1002
