tests/kyverno-policies/add-service-account/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-no-service-account-skip
  namespace: webservice
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
    - name: init2
      image: busybox
      securityContext:
        runAsUser: 0
        runAsGroup: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-namespace
  namespace: webservice2
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-mariadb
  namespace: webservice
  labels:
    app.kubernetes.io/name: mariadb
    osc.edu/service-account: test
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      securityContext:
        runAsUser: 1001
        runAsGroup: 0
  initContainers:
    - name: init
      image: busybox
      securityContext:
        runAsUser: 65534
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-no-service-account-skip
  namespace: paas-invalid
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
---
apiVersion: batch/v1
kind: Job
metadata:
  name: test-paas-service-account-job
  namespace: paas
spec:
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:latest
      initContainers:
        - name: init
          image: busybox
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: test-paas-service-account-cron
  namespace: paas
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: nginx
              image: nginx:latest
          initContainers:
            - name: init
              image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-service-account-mariadb
  namespace: paas
  labels:
    app.kubernetes.io/name: mariadb
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      securityContext:
        runAsUser: 1001
        runAsGroup: 0
  initContainers:
    - name: init
      image: busybox
      securityContext:
        runAsUser: 65534
---
apiVersion: batch/v1
kind: Job
metadata:
  name: test-webservice-service-account-job
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:latest
      initContainers:
        - name: init
          image: busybox
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
            privileged: false
        - name: init2
          image: busybox
          securityContext:
            runAsUser: 0
            runAsGroup: 0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: test-webservice-service-account-namespace-job
  namespace: webservice2
spec:
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:latest
      initContainers:
        - name: init
          image: busybox
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: test-webservice-service-account-cron
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: nginx
              image: nginx:latest
          initContainers:
            - name: init
              image: busybox
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                  - ALL
                seccompProfile:
                  type: RuntimeDefault
                privileged: false
            - name: init2
              image: busybox
              securityContext:
                runAsUser: 0
                runAsGroup: 0
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: test-webservice-service-account-namespace-cron
  namespace: webservice2
spec:
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: nginx
              image: nginx:latest
          initContainers:
            - name: init
              image: busybox
