tests/kyverno-policies/add-service-account/skip.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
