tests/kyverno-policies/add-service-account/webservice-service-account-mariadb-mutated-containers.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-mariadb-containers
  namespace: webservice
  labels:
    app.kubernetes.io/name: mariadb
    osc.edu/service-account: test
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      securityContext:
        runAsUser: 1000
        runAsGroup: 1001
  initContainers:
    - name: init
      image: busybox
      securityContext:
        runAsUser: 1000
