tests/kyverno-policies/add-service-account/webservice-service-account-mariadb-mutated-user-containers.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-mariadb
  namespace: webservice
  labels:
    app.kubernetes.io/name: mariadb
    osc.edu/service-account: test
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      securityContext:
        runAsUser: 1000
        runAsGroup: 0
  initContainers:
    - name: db-permissions
      image: busybox
      securityContext:
        runAsUser: 65534
