tests/kyverno-policies/add-service-account/webservice-service-account-mutated-containers.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-containers
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
