tests/kyverno-policies/add-service-account/webservice-service-account-mutated-partial.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-partial
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
  securityContext:
    fsGroup: 2000
    runAsGroup: 2000
    runAsUser: 1000
