tests/kyverno-policies/add-service-account/webservice-service-account-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
    - name: init2
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        runAsGroup: 1001
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1001
    fsGroup: 1001
    supplementalGroups:
      - 1001
      - 1002
---
apiVersion: v1
kind: Pod
metadata:
  name: test-webservice-service-account-namespace
  namespace: webservice2
  labels:
    osc.edu/service-account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
          - ALL
        seccompProfile:
          type: RuntimeDefault
        privileged: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1001
    fsGroup: 1001
    supplementalGroups:
      - 1001
      - 1002
