tests/kyverno-policies/add-service-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-service-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-service-account
    rule: webservice-service-account-run-as
    resources:
      - test-webservice-service-account
      - test-webservice-service-account-namespace
    patchedResources: webservice-service-account-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-service-account
    rule: webservice-service-account-run-as
    resources:
      - test-no-service-account-skip
    kind: Pod
    result: skip
  - policy: add-service-account
    rule: webservice-service-account-run-as-gen
    resources:
      - test-webservice-service-account-job
      - test-webservice-service-account-job-pod-label
      - test-webservice-service-account-namespace-job
    patchedResources: webservice-service-account-mutated.yaml
    kind: Job
    result: pass
  - policy: add-service-account
    rule: webservice-service-account-run-as-cron
    resources:
      - test-webservice-service-account-cron
      - test-webservice-service-account-cron-pod-label
      - test-webservice-service-account-namespace-cron
    patchedResources: webservice-service-account-mutated.yaml
    kind: CronJob
    result: pass
  - policy: add-service-account
    rule: webservice-service-account-run-as-gen
    resources:
      - test-webservice-service-account
      - test-no-service-account-skip
    kind: Pod
    result: skip
  - policy: add-service-account
    rule: webservice-service-account-run-as
    resources:
      - webservice/test-webservice-service-account-mariadb
    patchedResources: webservice-service-account-mariadb-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-service-account
    rule: webservice-service-account-run-as
    resources:
      - test-webservice-service-account-skip
    kind: Pod
    result: skip
  - policy: add-service-account
    rule: paas-service-account-run-as
    resources:
      - test-paas-service-account
    patchedResources: paas-service-account-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-service-account
    rule: paas-service-account-run-as
    resources:
      - paas/test-paas-service-account-mariadb
    patchedResources: paas-service-account-mariadb-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-service-account
    rule: paas-service-account-run-as
    resources:
      - test-paas-service-account-skip
    patchedResources: skip.yaml
    kind: Pod
    result: skip
  - policy: add-service-account
    rule: paas-service-account-run-as-gen
    resources:
      - test-paas-service-account-job
    patchedResources: paas-service-account-mutated.yaml
    kind: Job
    result: pass
  - policy: add-service-account
    rule: paas-service-account-run-as-cron
    resources:
      - test-paas-service-account-cron
    patchedResources: paas-service-account-mutated.yaml
    kind: CronJob
    result: pass
