tests/kyverno-policies/add-service-account/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: add-service-account
    rules:
      - name: webservice-add-service-account
        values:
          serviceAccount: test
      - name: webservice-service-account-run-as
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
      - name: webservice-service-account-run-as-gen
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
      - name: webservice-service-account-run-as-cron
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
      - name: paas-service-account-run-as
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
      - name: paas-service-account-run-as-gen
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
      - name: paas-service-account-run-as-cron
        values:
          serviceAccount: test
          uidMap.data.user-test: '1000'
          gidMap.data.user-test: '1001'
          gidsMap.data.user-test: '["1001","1002"]'
    resources:
      - name: test-no-service-account-skip
        values:
          serviceAccount: ''
          namespaceServiceAccount: ''
      - name: test-webservice-service-account-namespace
        values:
          namespaceServiceAccount: 'test'
      - name: test-webservice-service-account-namespace-job
        values:
          namespaceServiceAccount: 'test'
      - name: test-webservice-service-account-namespace-cron
        values:
          namespaceServiceAccount: 'test'
namespaceSelector:
  - name: user-test
    labels:
      foo: bar
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: webservice2
    labels:
      osc.edu/role: webservice
      osc.edu/service-account: test
  - name: paas-invalid
    labels:
      osc.edu/role: paas
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
